bark-rest: add API to list pending boards
